--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -30,7 +30,7 @@
     height: 100%;
     padding: 0 0 100px;
     overflow: hidden;
-    overflow-y: scroll;
+    // overflow-y: scroll;
     box-sizing: border-box;
     .inputMsg {
       width: 600px;
@@ -60,11 +60,14 @@
     }
     .items {
       width: 100%;
-      height: calc(100vh -100px);
+      height: calc(100vh - 100px);
+      margin-top: 48px;
       overflow: hidden;
+      overflow-y: scroll;
       font-size: 14px;
       .item {
         width: 100%;
+        margin-top: 48px;
         padding: 10px 20px;
         border-bottom: 1px solid #f0f0f0;
         display: flex;
@@ -84,6 +87,10 @@
           }
           > span {
             margin-left: 10px;
+          
+          }
+          > span:last-child{
+            width: calc(100% - 50px);
           }
         }
         .dianzhan {
