--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -19,19 +19,22 @@
 }
 .home {
   display: flex;
-  height: calc(100vh - 50px);
-  .left {
-    width: 220px;
-    height: 100%;
-    border-right: 1px solid #f0f0f0;
-  }
+  height: calc(100vh - 60px);
+  overflow-y: hidden;
+  border: 1px solid #fff;
+  // .left {
+  //   width: 220px;
+  //   height: 100%;
+  //   border-right: 1px solid #f0f0f0;
+  // }
   .right {
-    width: calc(100% - 221px);
+    // width: calc(100% - 221px);
+      width: 100%;
     height: 100%;
     padding: 0 0 100px;
-    overflow: hidden;
     // overflow-y: scroll;
     box-sizing: border-box;
+    border: 1px solid #fff;
     .inputMsg {
       width: 600px;
       position: absolute;
@@ -60,14 +63,14 @@
     }
     .items {
       width: 100%;
-      height: calc(100vh - 100px);
-      margin-top: 48px;
+      height: calc(100vh - 160px);
+      // margin-top: 48px;
       overflow: hidden;
-      overflow-y: scroll;
+      overflow-y: auto;
       font-size: 14px;
       .item {
         width: 100%;
-        margin-top: 48px;
+        // margin-top: 48px;
         padding: 10px 20px;
         border-bottom: 1px solid #f0f0f0;
         display: flex;
