--- a/src/layout/header/index.less
+++ b/src/layout/header/index.less
@@ -1,6 +1,5 @@
 .head {
   width: 100vw;
-  padding: 0 20px;
   box-sizing: border-box;
   background: rgba(231, 238, 243, 0.88);
   height: 48px;
@@ -8,7 +7,10 @@
   align-items: center;
   justify-content: end;
   .title {
-    margin-left: 5px;
+    margin:0 5px;
+  }
+  .head_left{
+    width:calc(100% - 92px) ;
   }
 }
 
