--- a/src/index.less
+++ b/src/index.less
@@ -102,18 +102,21 @@ body {
   }
 
   .inputMsg_right {
-    .ant-select {
-      .ant-select-selector {
-        border-start-end-radius: 0 !important;
-        border-end-end-radius: 0 !important;
-        border-start-start-radius: 0 !important;
-        border-end-start-radius: 0 !important;
-      }
-    }
-
     .ant-btn {
       right: 25px !important;
       top: 76% !important;
     }
+  }
+  :where(.css-dev-only-do-not-override-6j9yrn).ant-input-compact-item:not(.ant-input-compact-first-item).ant-input-compact-last-item, :where(.css-dev-only-do-not-override-6j9yrn).ant-input-compact-item:not(.ant-input-compact-first-item).ant-input-compact-last-item.ant-input-sm, :where(.css-dev-only-do-not-override-6j9yrn).ant-input-compact-item:not(.ant-input-compact-first-item).ant-input-compact-last-item.ant-input-lg{
+    border-start-end-radius: 0 !important;
+    border-end-end-radius: 0 !important;
+    border-start-start-radius: 0 !important;
+    border-end-start-radius: 0 !important;
+  }
+  :where(.css-dev-only-do-not-override-6j9yrn).ant-select-compact-item:not(.ant-select-compact-last-item).ant-select-compact-first-item>.ant-select-selector, :where(.css-dev-only-do-not-override-6j9yrn).ant-select-compact-item:not(.ant-select-compact-last-item).ant-select-compact-first-item.ant-select-sm>.ant-select-selector, :where(.css-dev-only-do-not-override-6j9yrn).ant-select-compact-item:not(.ant-select-compact-last-item).ant-select-compact-first-item.ant-select-lg>.ant-select-selector{
+    border-start-end-radius: 0 !important;
+    border-end-end-radius: 0 !important;
+    border-start-start-radius: 0 !important;
+    border-end-start-radius: 0 !important;
   }
 }
